--- a/assets/style.css
+++ b/assets/style.css
@@ -50,13 +50,28 @@ footer{
 .books{
     width: 40vw;
 }
-tr,td,th{
-    border: 1px solid black;
-    padding: 10px;
+tbody{
+    width: 800px;
 }
 table{
-    border-collapse: collapse;
+margin-right: 600px;
 }
+th{
+    width: 500px;
+    padding: 10px;
+}
+tr{
+    border: 2px solid white;
+    padding: 10px;
+    width: 500px;
+}
+td{
+    border: 2px solid white;
+    padding: 10px;
+    width: 300px;
+}
+
+
 @media (min-width:320px) and (max-width:767px){
     main{
         display: flex;
